Styled scrollbar and was added meta tags

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
+  <meta name="application-name" content="Bellgance">
+  <meta name="robots" content="all" />
+  <meta name="googlebot" content="index,follow">
+  <meta name="yandex" content="index,follow">
+  <meta name="yandex-verification" content="805fe81a262a630d" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Bellgance | Kamil' Ramazanov</title>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="container-fluid">
