Was added meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
   <meta name="googlebot" content="index,follow">
   <meta name="yandex" content="index,follow">
   <meta name="yandex-verification" content="805fe81a262a630d" />
+  <meta property="og:url" content="https://bellgance.github.io/">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Bellgance | Kamil' Ramazanov">
+  <meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
+  <meta property="og:site_name" content="Bellgance | Kamil' Ramazanov">
+  <meta name="twitter:card" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's">
+  <meta property="og:url" content="https://bellgance.github.io/">
+  <meta property="og:title" content="Bellgance | Kamil' Ramazanov">
+  <meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
+  <meta itemscope itemtype="http://schema.org/Article">
+  <meta itemprop="headline" content="Bellgance | Kamil' Ramazanov">
+  <meta itemprop="description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
+
+  <!-- <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="favicon-48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="favicon-62.png" sizes="62x62" type="image/png">
+  <link rel="icon" href="favicon-192.png" sizes="192x192" type="image/png">
+  <link rel="apple-touch-icon" href="older-iPhone.png"> // 120px
+  <link rel="apple-touch-icon" sizes="180x180" href="iPhone-6-Plus.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="iPad-etina.png"> -->
+
+  <link rel="apple-touch-icon" sizes="167x167" href="iPad-Pro.png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
