Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
   <link rel="icon" href="favicon-192.png" sizes="192x192" type="image/png">
   <link rel="apple-touch-icon" href="older-iPhone.png"> // 120px
   <link rel="apple-touch-icon" sizes="180x180" href="iPhone-6-Plus.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="iPad-etina.png"> -->
-
-  <link rel="apple-touch-icon" sizes="167x167" href="iPad-Pro.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="iPad-etina.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="iPad-Pro.png"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -39,7 +38,7 @@
   <title>Bellgance | Kamil' Ramazanov</title>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.min.css">
 </head>
 
 <body class="container-fluid">
