--- a/index.html
+++ b/index.html
@@ -376,6 +376,26 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Alarm-hours</h4>
+                      <ul class="list-unstyled">
+                        <li>React.js</li>
+                        <li>Javascript</li>
+                        <li>JSX</li>
+                        <li>CSS</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://bellgance.github.io/bikeshop/" target="_blank">View web-site</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
