Changed ref to alarm-hours

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://bellgance.github.io/bikeshop/" target="_blank">View web-site</a>
+                    <a href="https://github.com/bellgance/alarm-hours" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
