--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <title>Bellgance | Kamil' Ramazanov</title>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body class="container-fluid">
@@ -98,61 +98,34 @@
             <div class="spacer50"></div>
           </div>
 
-          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-            <section class="experience">
-              <h3 class="text-center">Experience</h3>
-              <div class="spacer25"></div>
-            </section>
-
-            <div class="spacer50"></div>
-          </div> -->
-
           <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
             <section class="skills">
               <h3 class="text-center">Skills</h3>
               <div class="spacer25"></div>
 
-              <div class="row">
-                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                      HTML5
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                      CSS3
-                    </div>
-                  </div>
+              <div class="row text-center">
+                <div class="col-sm-4 col-xs-12">
+                  <ul class="list-unstyled">
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Javascript</li>
+                  </ul>
                 </div>
 
-                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                      Bootstrap 3
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-                      JS
-                    </div>
-                  </div>
+                <div class="col-sm-4 col-xs-12">
+                  <ul class="list-unstyled">
+                    <li>React.js</li>
+                    <li>Bootstrap 3</li>
+                    <li>Jquery</li>
+                  </ul>
                 </div>
 
-                <div class="col-sm-4 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-                      Jquery
-                    </div>
-                  </div>
-
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                      Photoshop (cutting layout)
-                    </div>
-                  </div>
+                <div class="col-sm-4 col-xs-12">
+                  <ul class="list-unstyled">
+                    <li>Photoshop (cutting layout)</li>
+                    <li></li>
+                    <li></li>
+                  </ul>
                 </div>
               </div>
             </section>
@@ -191,6 +164,15 @@
                 </div>
               </div>
             </section>
+          </div> -->
+
+          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+            <section class="experience">
+              <h3 class="text-center">Experience</h3>
+              <div class="spacer25"></div>
+            </section>
+
+            <div class="spacer50"></div>
           </div> -->
         </div>
       </div>
@@ -362,25 +344,6 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
-                      <h4>Counter</h4>
-                      <ul class="list-unstyled">
-                        <li>React.js</li>
-                        <li>Javascript</li>
-                        <li>JSX</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <div class="bottom-part text-center">
-                    <a href="https://github.com/bellgance/counter" target="_blank">View web-app</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <div class="card">
-                  <div class="top-part">
-                    <div class="des">
                       <h4>Alarm-hours</h4>
                       <ul class="list-unstyled">
                         <li>React.js</li>
@@ -393,6 +356,45 @@
 
                   <div class="bottom-part text-center">
                     <a href="https://github.com/bellgance/alarm-hours" target="_blank">View web-site</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Cities</h4>
+                      <ul class="list-unstyled">
+                        <li>React.js</li>
+                        <li>Javascript</li>
+                        <li>JSX</li>
+                        <li>CSS</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://github.com/bellgance/cities" target="_blank">View web-site</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Clicker</h4>
+                      <ul class="list-unstyled">
+                        <li>React.js</li>
+                        <li>Javascript</li>
+                        <li>JSX</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://github.com/bellgance/clicker" target="_blank">View web-app</a>
                   </div>
                 </div>
               </div>
@@ -430,7 +432,7 @@
 
       <div class="row">
         <div class="col-sm-12 col-xs-12">
-          <p class="created text-center">Created by <a href="https://github.com/bellgance" target="_blank">Bellgance</a><br>with using Bootstrap 3, modernizr.</p>
+          <p class="created text-center">Created by <a href="https://github.com/bellgance" target="_blank">Bellgance</a></p>
         </div>
       </div>
     </div>
@@ -475,7 +477,6 @@
 
   <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script src="/js/bootstrap.min.js" charset="utf-8"></script>
-  <script src="/js/modernizr-2.8.3.min.js" charset="utf-8"></script>
   <script src="/js/scripts.js" charset="utf-8"></script>
 </body>
 
