--- a/index.html
+++ b/index.html
@@ -49,18 +49,6 @@
           <li><a href="#top">Hey</a></li>
           <li><a href="#about">About me</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-
-          <li class="hidden dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
-              <span class="caret"></span>
-            </a>
-
-            <ul class="dropdown-menu">
-              <li><a href="#">Page 1-1</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
-            </ul>
-          </li>
         </ul>
       </div>
     </nav>
@@ -114,66 +102,24 @@
 
                 <div class="col-sm-4 col-xs-12">
                   <ul class="list-unstyled">
-                    <li>React.js</li>
                     <li>Bootstrap 3</li>
+                    <li>React.js</li>
                     <li>Jquery</li>
+                    <li>Less</li>
                   </ul>
                 </div>
 
                 <div class="col-sm-4 col-xs-12">
                   <ul class="list-unstyled">
+                    <li>Stylus</li>
+                    <li>Git</li>
                     <li>Photoshop (cutting layout)</li>
-                    <li></li>
-                    <li></li>
+                    <li>Browser Dev Tools</li>
                   </ul>
                 </div>
               </div>
             </section>
-
-            <!-- <div class="spacer50"></div> -->
           </div>
-
-          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-            <section class="expertise">
-              <h3 class="text-center">Fields of expertise</h3>
-              <div class="spacer25"></div>
-
-              <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-              </div>
-            </section>
-          </div> -->
-
-          <!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
-            <section class="experience">
-              <h3 class="text-center">Experience</h3>
-              <div class="spacer25"></div>
-            </section>
-
-            <div class="spacer50"></div>
-          </div> -->
         </div>
       </div>
     </section>
