Fix text & rm bootstrap.js

--- a/index.html
+++ b/index.html
@@ -22,23 +22,13 @@
   <meta itemprop="headline" content="Bellgance | Kamil' Ramazanov">
   <meta itemprop="description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 
-  <!-- <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="favicon-48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="favicon-62.png" sizes="62x62" type="image/png">
-  <link rel="icon" href="favicon-192.png" sizes="192x192" type="image/png">
-  <link rel="apple-touch-icon" href="older-iPhone.png"> // 120px
-  <link rel="apple-touch-icon" sizes="180x180" href="iPhone-6-Plus.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="iPad-etina.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="iPad-Pro.png"> -->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Bellgance | Kamil' Ramazanov</title>
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.min.css">
 </head>
 
 <body class="container-fluid">
@@ -141,20 +131,20 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
-                      <h4>Digital Coach</h4>
+                      <h4>ArtSakha</h4>
                       <ul class="list-unstyled">
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Less</li>
+                        <li>Javascript</li>
                         <li>Bootstrap 3</li>
                         <li>CSS animations</li>
-                        <li>Flexbox</li>
                       </ul>
                     </div>
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="http://dcoach.net/" target="_blank">View web-site</a>
+                    <a href="http://artsakha.ru/#home" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -184,20 +174,20 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
-                      <h4>ArtSakha</h4>
+                      <h4>Digital Coach</h4>
                       <ul class="list-unstyled">
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Less</li>
-                        <li>Javascript</li>
                         <li>Bootstrap 3</li>
                         <li>CSS animations</li>
+                        <li>Flexbox</li>
                       </ul>
                     </div>
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="http://artsakha.ru/#home" target="_blank">View web-site</a>
+                    <a href="http://dcoach.net/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -206,7 +196,7 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
-                      <h4>Tuneft</h4>
+                      <h4>Tuymaada Oil</h4>
                       <ul class="list-unstyled">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -218,7 +208,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://github.com/Bellgance/tuneft" target="_blank">View web-site</a>
+                    <a href="http://opt.tuneft.ru/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -248,25 +238,6 @@
                 <div class="card">
                   <div class="top-part">
                     <div class="des">
-                      <h4>Corporate-blue</h4>
-                      <ul class="list-unstyled">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap 3</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <div class="bottom-part text-center">
-                    <a href="https://bellgance.github.io/corporate-blue/" target="_blank">View web-site</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <div class="card">
-                  <div class="top-part">
-                    <div class="des">
                       <h4>Bikeshop</h4>
                       <ul class="list-unstyled">
                         <li>HTML</li>
@@ -278,6 +249,25 @@
 
                   <div class="bottom-part text-center">
                     <a href="https://bellgance.github.io/bikeshop/" target="_blank">View web-site</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                <div class="card">
+                  <div class="top-part">
+                    <div class="des">
+                      <h4>Corporate-blue</h4>
+                      <ul class="list-unstyled">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap 3</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="bottom-part text-center">
+                    <a href="https://bellgance.github.io/corporate-blue/" target="_blank">View web-site</a>
                   </div>
                 </div>
               </div>
@@ -322,7 +312,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://github.com/bellgance/alarm-hours" target="_blank">View web-site</a>
+                    <a href="https://github.com/bellgance/alarm-hours" target="_blank">View web-app</a>
                   </div>
                 </div>
               </div>
@@ -342,26 +332,7 @@
                   </div>
 
                   <div class="bottom-part text-center">
-                    <a href="https://github.com/bellgance/cities" target="_blank">View web-site</a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <div class="card">
-                  <div class="top-part">
-                    <div class="des">
-                      <h4>Clicker</h4>
-                      <ul class="list-unstyled">
-                        <li>React.js</li>
-                        <li>Javascript</li>
-                        <li>JSX</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <div class="bottom-part text-center">
-                    <a href="https://github.com/bellgance/clicker" target="_blank">View web-app</a>
+                    <a href="https://github.com/bellgance/cities" target="_blank">View web-app</a>
                   </div>
                 </div>
               </div>
@@ -379,7 +350,6 @@
       <div class="row">
         <div class="col-sm-6 col-xs-12">
           <ul class="list-unstyled text-right">
-            <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
             <li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
             <li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
             <li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
@@ -388,7 +358,7 @@
 
         <div class="col-sm-6 col-xs-12">
           <ul class="list-unstyled text-left">
-            <li><a href="https://stepik.org/users/33405746" target="_blank">Stepik</a></li>
+            <li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
             <li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
             <li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
           </ul>
@@ -442,7 +412,6 @@
   <!-- /Yandex.Metrika counter -->
 
   <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="/js/bootstrap.min.js" charset="utf-8"></script>
   <script src="/js/scripts.js" charset="utf-8"></script>
 </body>
 
