--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
 			<h2>About</h2>
 			<p>Hi! My name is Kamil Ramazanov. I am frontend developer.</p>
 
-			<p>I was born on March 18, 1998 in the north of Russia, in the Republic of Sakha (Yakutia). In 2016, I graduated from the secondary school there. In September of that year I entered at the North-Eastern Federal University on the specialty "Fundamental
-				Informatics and Information Technology" in Yakutsk. In the summer of 2017 I found work in a marketing agency in the office as an HTML-coder. After 3 months, I quit. In September 2017, I was leave from the university, because I lost interest and wanted
-				to work. Then half a year was engaged in making up websites on freelancing. In February 2018, I started working in company the MyTona as a frontend developer.</p>
-			<p>I like to be engaged in HTML-markup of websites, studying front-end technologies, solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>,
-				watching anime and playing in the World of Tanks.</p>
+			<p>I was born on March 18, 1998, in the north of Russia, in the Republic of Sakha (Yakutia). In 2016, I graduated from the secondary school there. In September of that year, I entered at the North-Eastern Federal University on the specialty "Fundamental
+				Informatics and Information Technology" in Yakutsk. In the summer of 2017, I found work in a marketing agency in the office as an HTML-coder. After 3 months, I quit. In September 2017, I was leaving the university, because I lost interest and wanted
+				to work. Then half a year was engaged in making up websites on freelancing. In February 2018, I started working in the company MyTona as a frontend developer.</p>
+			<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>.</p>
 
 			<div hidden>
 				<h2>Experience</h2>
@@ -172,7 +171,7 @@
 			<hr>
 
 			<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
-			<p>Analog and digital clocks on pure CSS and Javascript</p>
+			<p>Analog and digital clocks on pure CSS</p>
 			<time>September 2017</time>
 			<hr>
 
