--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<meta name="robots" content="all" />
 	<meta name="googlebot" content="index,follow">
 	<meta name="yandex" content="index,follow">
-	<meta name="yandex-verification" content="805fe81a262a630d" />
-	<meta property="og:url" content="https://bellgance.github.io/">
+	<meta name="yandex-verification" content="ef9a3bf14d63e52d" />
+	<meta property="og:url" content="https://developer.ramazanovkamil.me/">
 	<meta property="og:type" content="article">
 	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
 	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 	<meta property="og:site_name" content="Bellgance | Kamil' Ramazanov">
 	<meta name="twitter:card" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's">
-	<meta property="og:url" content="https://bellgance.github.io/">
+	<meta property="og:url" content="https://developer.ramazanovkamil.me/">
 	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
 	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 	<meta itemscope itemtype="http://schema.org/Article">
