Add yandex tools

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<meta name="robots" content="all" />
 	<meta name="googlebot" content="index,follow">
 	<meta name="yandex" content="index,follow">
-	<meta name="yandex-verification" content="ef9a3bf14d63e52d" />
-	<meta property="og:url" content="https://developer.ramazanovkamil.me/">
+	<meta name="yandex-verification" content="2953db0372371439" />
+	<meta property="og:url" content="https://ramazanovkamil.me/">
 	<meta property="og:type" content="article">
 	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
 	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 	<meta property="og:site_name" content="Bellgance | Kamil' Ramazanov">
 	<meta name="twitter:card" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's">
-	<meta property="og:url" content="https://developer.ramazanovkamil.me/">
+	<meta property="og:url" content="https://ramazanovkamil.me/">
 	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
 	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 	<meta itemscope itemtype="http://schema.org/Article">
@@ -219,7 +219,7 @@
 		}
 
 		function portfolio() {
-			if (Math.max(window.innerWidth|| document.documentElement.clientWidth || document.body.clientWidth) > 750) {
+			if (Math.max(window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth) > 750) {
 				var aboutHeight = document.getElementById('about').offsetHeight + 75;
 				window.scrollTo(0, aboutHeight);
 			} else {
@@ -229,7 +229,7 @@
 		}
 
 		function contacts() {
-			if (Math.max(window.innerWidth|| document.documentElement.clientWidth || document.body.clientWidth) > 750) {
+			if (Math.max(window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth) > 750) {
 				var aboutHeight = document.getElementById('about').offsetHeight + 75 + document.getElementById('portfolio').offsetHeight;
 				window.scrollTo(0, aboutHeight);
 			} else {
@@ -244,11 +244,12 @@
 		(function(d, w, c) {
 			(w[c] = w[c] || []).push(function() {
 				try {
-					w.yaCounter46419480 = new Ya.Metrika({
-						id: 46419480,
+					w.yaCounter47926145 = new Ya.Metrika({
+						id: 47926145,
 						clickmap: true,
 						trackLinks: true,
-						accurateTrackBounce: true
+						accurateTrackBounce: true,
+						webvisor: true
 					});
 				} catch (e) {}
 			});
@@ -269,11 +270,7 @@
 			}
 		})(document, window, "yandex_metrika_callbacks");
 	</script>
-	<noscript>
-    <div>
-      <img src="https://mc.yandex.ru/watch/46419480" style="position:absolute; left:-9999px;" alt="" />
-    </div>
-  </noscript>
+	<noscript><div><img src="https://mc.yandex.ru/watch/47926145" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </body>
 
