Fixed meta tags

--- a/index.html
+++ b/index.html
@@ -6,24 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<meta name="description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
+	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
 	<meta name="application-name" content="Bellgance">
-	<meta name="robots" content="all" />
-	<meta name="googlebot" content="index,follow">
-	<meta name="yandex" content="index,follow">
 	<meta name="yandex-verification" content="2953db0372371439" />
-	<meta property="og:url" content="https://ramazanovkamil.me/">
-	<meta property="og:type" content="article">
-	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
-	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
-	<meta property="og:site_name" content="Bellgance | Kamil' Ramazanov">
-	<meta name="twitter:card" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's">
-	<meta property="og:url" content="https://ramazanovkamil.me/">
-	<meta property="og:title" content="Bellgance | Kamil' Ramazanov">
-	<meta property="og:description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
-	<meta itemscope itemtype="http://schema.org/Article">
-	<meta itemprop="headline" content="Bellgance | Kamil' Ramazanov">
-	<meta itemprop="description" content="Personal site of Kamil' Ramazanov (Bellgance), frontend developer's. About me, Skills, Portfolio...">
 
 	<title>Bellgance | Kamil Ramazanov</title>
 
