--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 	<title>Bellgance | Kamil Ramazanov</title>
 
+	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+	<link rel="icon" href="favicon.png" type="image/x-icon">
+
 	<link rel="stylesheet" href="/styles/normalize.min.css">
 	<link rel="stylesheet" href="/styles/skeleton.min.css">
 	<link rel="stylesheet" href="/styles/styles.min.css">
@@ -20,9 +23,9 @@
 <body id="top" class="container">
 	<nav class="container">
 		<ul>
-			<li><a onclick="about()">About me</a></li>
-			<li><a onclick="portfolio()">Portfolio</a></li>
-			<li><a onclick="contacts()">Contacts</a></li>
+			<li><a href="#top" class="without-hash">About me</a></li>
+			<li><a href="#portfolio" class="without-hash">Portfolio</a></li>
+			<li><a href="#contacts" class="without-hash">Contacts</a></li>
 		</ul>
 	</nav>
 
@@ -38,20 +41,18 @@
 				to work. Then 4 months I was engaged in making up websites on freelancing. In February 2018, I started working in the company MyTona as a frontend developer.</p>
 			<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>.</p>
 
-			<div hidden>
-				<h2>Experience</h2>
+			<h2>Experience</h2>
+			<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+			<time>July 2017 - October 2017</time>
+			<hr>
 
-				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
-				<time>July 2017 - October 2017</time>
-				<p>Marketing agency</p>
+			<h3>Freelance</h3>
+			<time>October 2017 - January 2018</time>
+			<hr>
 
-				<h3>Freelance</h3>
-				<time>October 2017 - January 2018</time>
-
-				<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
-				<time>February 2018 - up to date</time>
-				<p></p>
-			</div>
+			<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
+			<p></p>
+			<time>February 2018 - up to date</time>
 
 			<h2>Skills</h2>
 			<div class="row">
@@ -199,27 +200,11 @@
 	</main>
 
 	<script type="text/javascript">
-		function about() {
-			window.scrollTo(0, 0);
-		}
-
-		function portfolio() {
-			if (Math.max(window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth) > 750) {
-				var aboutHeight = document.getElementById('about').offsetHeight + 75;
-				window.scrollTo(0, aboutHeight);
-			} else {
-				var aboutHeight = document.getElementById('about').offsetHeight + 65;
-				window.scrollTo(0, aboutHeight);
-			}
-		}
-
-		function contacts() {
-			if (Math.max(window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth) > 750) {
-				var aboutHeight = document.getElementById('about').offsetHeight + 75 + document.getElementById('portfolio').offsetHeight;
-				window.scrollTo(0, aboutHeight);
-			} else {
-				var aboutHeight = document.getElementById('about').offsetHeight + 65 + document.getElementById('portfolio').offsetHeight;
-				window.scrollTo(0, aboutHeight);
+		var refs = document.getElementsByClassName('without-hash');
+		for (var i = 0; i < refs.length; i++) {
+			refs[i].onclick = function() {
+				event.preventDefault();
+				document.getElementById((this.hash).slice(1)).scrollIntoView(true);
 			}
 		}
 	</script>
