--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<meta name="application-name" content="Bellgance">
 	<meta name="yandex-verification" content="2953db0372371439" />
 
-	<title>Bellgance | Kamil Ramazanov</title>
+	<title>Kamil Ramazanov / Personal web-site</title>
 
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="icon" href="favicon.png" type="image/x-icon">
 
 	<link rel="stylesheet" href="/styles/normalize.min.css">
 	<link rel="stylesheet" href="/styles/skeleton.min.css">
-	<link rel="stylesheet" href="/styles/styles.min.css">
+	<link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body id="top" class="container">
