Added cgxpyakutsk to portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<link rel="stylesheet" href="/styles/normalize.min.css">
 	<link rel="stylesheet" href="/styles/skeleton.min.css">
-	<link rel="stylesheet" href="/styles/styles.css">
+	<link rel="stylesheet" href="/styles/styles.min.css">
 </head>
 
 <body id="top" class="container">
@@ -143,6 +143,11 @@
 			<h3><a href="http://opt.tuneft.ru/" target="_blank">Tuymaada Oil</a></h3>
 			<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
 			<time>July 2017</time>
+			<hr>
+
+			<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo 2018</a></h3>
+			<p>Republican competition for 2D artists and 3D modelers</p>
+			<time>March 2018</time>
 			<hr>
 
 			<h2>Web-applications</h2>
