Add new web app - t3, add tools

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="four columns">
 					<p><b>Frameworks / Libraries / etc:</b></p>
 					<ul>
-						<li>Bootstrap 3</li>
+						<li>Bootstrap</li>
 						<li>Jquery</li>
 						<li>React.js</li>
 						<li>Skeleton</li>
@@ -80,6 +80,8 @@
 					<p><b>Tools:</b></p>
 					<ul>
 						<li>Git</li>
+						<li>Gulp</li>
+						<li>Webpack</li>
 						<li>Browser Developer Tools</li>
 						<li>Photoshop (cutting layout)</li>
 					</ul>
@@ -152,7 +154,7 @@
 
 			<h2>Web-applications</h2>
 			<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank">Alarm-hours</a></h3>
-			<p>Alarm clock with time selection on React.js</p>
+			<p>Alarm clock with time selection and play music on React.js</p>
 			<time>December 2017</time>
 			<hr>
 
@@ -162,13 +164,18 @@
 			<hr>
 
 			<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
-			<p>Analog and digital clocks on pure CSS</p>
+			<p>Analog and digital clocks on pure CSS and Javascript</p>
 			<time>September 2017</time>
 			<hr>
 
 			<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank">Paint on canvas</a></h3>
 			<p>Draw on canvas</p>
 			<time>February 2018</time>
+			<hr>
+
+			<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank">Tick Tack Toe</a></h3>
+			<p>The game of tic-tac-toe on React.js and CSS Grid</p>
+			<time>April 2018</time>
 		</section>
 
 		<section id="contacts">
